<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <ImageView
        android:id="@+id/voiceIconPFImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="63dp"
        android:src="@drawable/ic_baseline_keyboard_voice_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/voicePFTextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto_black"
        android:text="Tap to Assist "
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/voiceIconPFImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/voicePFImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/speech_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voicePFTextViewTitle" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_wrapper"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/bg_top_only_roundcorners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewCaseId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="15dp"
            android:paddingTop="2dp"
            android:paddingEnd="2dp"
            android:text="Case #"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/header_wrapper" />


        <TextView
            android:id="@+id/textViewCaseIdNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="2dp"
            android:paddingEnd="20dp"
            android:text="5432"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textViewCaseId"
            app:layout_constraintTop_toTopOf="@id/header_wrapper" />

        <TextView
            android:id="@+id/textViewPatientCaseDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="15dp"
            android:paddingTop="2dp"
            android:paddingEnd="20dp"
            android:text="Medical Description"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCaseId" />


        <TextView
            android:id="@+id/textViewPatientCaseDesDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            android:text="Tell me about the case ... "
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPatientCaseDes" />


        <TextView
            android:id="@+id/textViewPatientDiagnosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:text="Possible Diagnosis"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPatientCaseDesDetails" />


        <TextView
            android:id="@+id/textViewPatientCaseDiagnosisDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            android:text="Waiting to diagnose..."
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPatientDiagnosis" />

        <android.widget.Button
            android:id="@+id/startDiagonsisButton"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_rounded_bluecorners"
            android:text="Update Diagnosis"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPatientCaseDiagnosisDetails" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
