...
                    android:paddingStart="10dp"
                    android:text="Name"
                    android:textColor="@color/blue"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/editPFTextViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:inputType="textPersonName"
...
                android:orientation="horizontal">


            </LinearLayout>

            <Button
                android:id="@+id/updateCaseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
...
