...
                                    android:layout_height="1dp"
                                    android:layout_below="@id/textViewHistoryName"
                                    android:layout_marginTop="8dp"
                                    android:background="#DDDDDD" />

                                <Button
                                    android:id="@+id/buttonViewHistory"
                                    style="?android:attr/borderlessButtonStyle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/line1"
                                    android:paddingStart="20dp"
                                    android:text="@string/buttonView"
...
                                    android:layout_height="1dp"
                                    android:layout_below="@+id/textViewReportName"
                                    android:layout_marginTop="8dp"
                                    android:background="#DDDDDD" />

                                <Button
                                    android:id="@+id/buttonViewReport"
                                    style="?android:attr/borderlessButtonStyle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/line2"
                                    android:paddingStart="20dp"
                                    android:text="@string/buttonView"
...
